patterns/observability/argo/values/kube-prometheus-stack/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
  namespace: observability
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/shared-gateway
  http:
    - match:
        - port: 5000
      route:
        - destination:
            host: kube-prometheus-stack-grafana.observability.svc.cluster.local
            port:
              number: 80
